--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,28 @@
 button {
   cursor: pointer;
+  border: 0;
+  height: 42px;
+  font-size: 24px;
+  background-color: white;
+  border-radius: 12px;
+}
+
+input {
+  border-radius: 12px;
+  border: 0;
+  height: 28px;
+  font-size: 16px;
 }
 
 .flex-fill {
   flex-grow: 1;
+}
+
+.hover-shadow {
+  box-shadow: 0px 2px 5px #999;
+  transition: box-shadow 0.25s ease-in-out;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0px 2px 15px #999;
 }
