--- a/public/style.css
+++ b/public/style.css
@@ -1,28 +1,49 @@
 button {
   cursor: pointer;
-  border: 0;
-  height: 42px;
-  font-size: 24px;
-  background-color: white;
-  border-radius: 12px;
-}
-
-input {
-  border-radius: 12px;
-  border: 0;
-  height: 28px;
-  font-size: 16px;
 }
 
 .flex-fill {
   flex-grow: 1;
 }
 
-.hover-shadow {
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* .hover-shadow {
   box-shadow: 0px 2px 5px #999;
   transition: box-shadow 0.25s ease-in-out;
 }
 
 .hover-shadow:hover {
   box-shadow: 0px 2px 15px #999;
+} */
+
+/* Form */
+
+.Form {
+  background-color: #efefef;
+  width: 500px;
+  margin: 50px auto 0 auto;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.Form form {
+  height: 100%;
+}
+
+.Form button, .Form .link, .Form p {
+  margin: 5px 0;
+}
+
+.Form h1, .Form input {
+  margin-bottom: 10px;
+}
+
+.Form h1 {
+  font-size: 42px;
 }
