--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -2,7 +2,7 @@
   background-color: #efefef;
   max-width: 200px;
   word-break: break-word;
-  margin: 20px 0;
+  margin: 20px;
   padding: 10px;
   border-radius: 10px;
 }
