--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,3 +1,13 @@
-.Profile {
-  padding: 20px;
+.Profile form {
+  margin: 20px;
+}
+
+.Profile .profile-title {
+  margin: 20px 0 0 20px;
+  font-size: 36px;
+}
+
+.Profile .profile-subtitle {
+  margin-left: 20px;
+  font-size: 24px;
 }
