--- a/src/components/User/User.css
+++ b/src/components/User/User.css
@@ -1,8 +1,14 @@
 .User {
   background-color: #efefef;
-  max-width: 200px;
+  max-width: 300px;
   word-break: break-word;
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
+  box-shadow: 0 2px 5px #999;
+}
+
+.User h1 {
+  font-size: 24px;
+  margin: 0;
 }
