--- a/public/style.css
+++ b/public/style.css
@@ -7,9 +7,9 @@ button {
   cursor: pointer;
 }
 
-.flex-fill {
+/* .flex-fill {
   flex-grow: 1;
-}
+} */
 
 .flex-col {
   display: flex;
@@ -18,14 +18,17 @@ button {
   justify-content: center;
 }
 
-/* .hover-shadow {
-  box-shadow: 0px 2px 5px #999;
-  transition: box-shadow 0.25s ease-in-out;
+.shadowed {
+  box-shadow: 0 2px 5px #999;
 }
 
+.hover-shadow {
+  box-shadow: 0 2px 5px #999;
+  transition: box-shadow 0.25s ease-in-out;
+}
 .hover-shadow:hover {
-  box-shadow: 0px 2px 15px #999;
-} */
+  box-shadow: 0 2px 15px #999;
+}
 
 /* Form */
 
@@ -34,7 +37,7 @@ button {
   width: 500px;
   margin: 50px auto 0 auto;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 .Form form {
