--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -3,15 +3,27 @@
 }
 
 .Profile form {
-  margin: 0 10px;
+  margin: 15px 0 0 10px;
+}
+
+.Profile .profile-picture {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 30px;
+  display: inline-block;
+  box-shadow: 0 0 5px #333;
+  margin: 10px 10px 5px 10px;
 }
 
 .Profile .profile-title {
-  margin: 10px 0 0 10px;
+  margin: 0;
+  display: inline-block;
   font-size: 36px;
+  vertical-align: middle;
 }
 
 .Profile .profile-subtitle {
-  margin-left: 10px;
+  margin: 0 0 0 10px;
   font-size: 24px;
 }
