--- a/public/style.css
+++ b/public/style.css
@@ -35,7 +35,7 @@ button {
 .Form {
   background-color: #efefef;
   width: 500px;
-  margin: 50px auto 0 auto;
+  margin: 50px auto;
   padding: 20px;
   border-radius: 20px;
 }
