--- a/src/components/PostList/PostList.css
+++ b/src/components/PostList/PostList.css
@@ -1,3 +1,11 @@
+.PostList form {
+  margin: 14px 0 0 10px;
+}
+
+.PostList .friend-button {
+  margin: 5px 0 10px 10px;
+}
+
 .PostList .posts {
   display: flex;
   flex-wrap: wrap;
