--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -16,10 +16,21 @@
   margin: 0;
   display: inline-block;
   font-size: 36px;
-  vertical-align: middle;
+  vertical-align: bottom;
 }
 
 .Profile .profile-subtitle {
-  margin-left: 10px;
+  display: inline-block;
+  margin: 0 0 7px 10px;
   font-size: 24px;
+  vertical-align: bottom;
+}
+
+.Profile .status-input {
+  margin: 10px 10px 0 10px;
+  width: 300px;
+}
+
+.Profile .status-updated, .Profile .status-text {
+  margin: 10px 0 0 10px;
 }
