--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,10 @@ button {
   cursor: pointer;
 }
 
+textarea {
+  resize: none!important;
+}
+
 button, input, textarea {
   border-radius: 5px!important;
 }
