--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -5,14 +5,17 @@
   border-radius: 10px;
 }
 
+.Message h6 {
+  font-size: 12px;
+  margin: 0;
+  color: #999;
+}
+
 .sent-message {
   background-color: #209cee;
 }
-
-.Message h6 {
-  /* font-size: 12px; */
-  margin: 0;
-  color: #555;
+.sent-message h6 {
+  color: #0c639d;
 }
 
 .Message p {
