--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -4,40 +4,41 @@
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
+  width: 100%;
 }
 
 /* post width */
 
 /* 1 to a row */
-@media (min-width: 320px) {
+/* @media (min-width: 320px) {
   .Post {
     width: 100%;
   }
-}
+} */
 /* 2 to a row */
-@media (min-width: 576px) {
+/* @media (min-width: 576px) {
   .Post {
     width: calc((100% - (2 * 20px)) / 2);
   }
-}
+} */
 /* 3 to a row */
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .Post {
     width: calc((100% - (3 * 20px)) / 3);
   }
-}
+} */
 /* 4 to a row */
-@media (min-width: 992px) {
+/* @media (min-width: 992px) {
   .Post {
     width: calc((100% - (4 * 20px)) / 4);
   }
-}
+} */
 /* 5 to a row */
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
   .Post {
     width: calc((100% - (5 * 20px)) / 5);
   }
-}
+} */
 
 /* end post width */
 
