Update profile page styling.

--- a/src/components/FriendsList/FriendsList.css
+++ b/src/components/FriendsList/FriendsList.css
@@ -15,10 +15,12 @@
 }
 .FriendsList .PostList {
   width: 200px;
+  margin: 0;
 }
 .FriendsList .PostList .friend-button {
   width: 180px;
 }
 .FriendsList .PostList .Post {
   width: 180px;
+  margin: 10px;
 }
