--- a/src/components/Messages/Messages.css
+++ b/src/components/Messages/Messages.css
@@ -5,7 +5,7 @@
 /* friends list */
 
 .Messages .friends-list {
-  background-color: #999;
+  background-color: #bbb;
   position: fixed;
   height: 100%;
   width: 200px;
