--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -23,8 +23,12 @@
   color: #999;
 }
 
-.Post p {
-  margin: 10px 0;
+.Post .post-content {
+  margin: 8px 0 0 0;
+}
+
+.Post .really-delete {
+  margin: 5px 0;
 }
 
 .Post .delete-button {
