--- a/src/components/FriendsList/FriendsList.css
+++ b/src/components/FriendsList/FriendsList.css
@@ -13,7 +13,9 @@
   background-color: #bbb;
   width: 220px;
   position: fixed;
-  height: 100%;
+  /* needs to be fixed to account for expanded navbar */
+  height: calc(100% - 76px);
+  overflow-y: scroll;
 }
 
 @media (max-width: 575px) {
