--- a/src/components/FriendsList/FriendsList.css
+++ b/src/components/FriendsList/FriendsList.css
@@ -11,10 +11,9 @@
 
 .FriendsList .friends-users {
   background-color: #bbb;
+  float: left;
+  height: 100%;
   width: 220px;
-  position: fixed;
-  /* needs to be fixed to account for expanded navbar */
-  height: calc(100% - 76px);
   overflow-y: scroll;
 }
 
