Improve friends page styling.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,11 +4,8 @@
   flex-direction: column;
 }
 
-.Page, .Friends, .FriendsList {
-  height: inherit;
-}
-
 .Page {
+  height: 100%;
   flex: 1;
   overflow: auto;
 }
